# gemini-literature-search-mcp

./: .env.template  .gemini_literature_search.py.swp  .gitignore  README.md  calculator_server.py  gemini_literature_search.py  gemini_mcp_standalone.py  pyproject.toml  requirements.txt  run_calculator_server.sh  run_doctests.sh  run_gemini_server.sh  run_with_fallback.py  setup_venv.sh  simple_natural_parser.py  test_find_supporting_literature.py  test_find_unsupporting_literature.py  test_incomplete_json.py  test_multiple_literature.py  test_natural_language.py  test_results.json  test_token_limits.py  test_unsupporting_results.json
